# LLVM_Instrumentation_Pass

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  logger.h
InstrumentFunctions/: CMakeLists.txt  Makefile  Pass.cpp  logger.c  zlog.conf.default
examples/performance/: instrumented_main_00001  main.c
test/: buffer  buffer.bc  buffer.c  instrumented_buffer.bc  instrumented_buffer.s  logger.c  traces.1  zlog.conf
